<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddCoinActivity"
    android:background="@drawable/background">


  <TextView
      android:id="@+id/tv_add_coin_add_coin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="25dp"
      android:layout_marginEnd="50dp"
      android:gravity="center"
      android:text="Add Coin"
      android:textColor="@color/white"
      android:textSize="35dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_name_of_coin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_add_coin_add_coin"
      android:layout_marginTop="80dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_name_of_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/name_of_coin"
        android:textColor="@color/white"
        android:textSize="20sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_value_of_coin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/til_name_of_coin"
      android:layout_margin="10dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_value_of_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/value_of_coin"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="20sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_date_of_coin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/til_value_of_coin"
      android:layout_margin="10dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_date_of_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/date_of_coin"
        android:textColor="@color/white"
        android:textSize="20sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btn_add_coin_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="32dp"
      android:text="@string/save"
    />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="135dp"
      android:layout_height="115dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="12dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/til_date_of_coin"
      app:srcCompat="@android:mipmap/sym_def_app_icon"
      android:onClick="chooseImage"/>


</androidx.constraintlayout.widget.ConstraintLayout>