<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.MainMeniuActivity"        android:weightSum="2"

    >

    <TextView
        android:id="@+id/tv_meniu_meniu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Meniu"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_meniu_add_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:text="@string/add_coin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_meniu_meniu" />

    <Button
        android:id="@+id/btn_meniu_view_list_of_coins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_meniu_add_coin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:text="@string/list_of_coins"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_baseline_list_24"
        android:drawablePadding="20dp"
        />

    <Button
        android:id="@+id/btn_meniu_view_list_of_coins_from_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_meniu_view_list_of_coins"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:text="@string/list_of_coins_json"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_baseline_list_24"
        android:drawablePadding="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>